ヘッダーフッターナビ見出し追加

--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/common.css">
   <title>ハッピーリフォーム公式サイト</title>
 </head>
+
 <body>
-  <h1>ハッピーリフォームでキッチンをリフォームしよう</h1>
+  <header>
+    <h1>ハッピーリフォームでキッチンをリフォームしよう</h1>
+    <nav>
+      <ul>
+        <li>リフォームの基礎知識</li>
+        <li>会社案内</li>
+        <li>お問い合わせ</li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h2>お知らせ</h2>
+    <h2>リフォームの基礎知識</h2>
+    <h2>会社案内</h2>
+    <h2>お問い合わせ</h2>
+  </main>
+  <footer>
+    <p>Tel:000-000-0000</p>
+    <p>滋賀県草津市1-1-1</p>
+  </footer>
 </body>
+
 </html>
